# living-memory

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  config.yaml  docker-compose.yml  dreamcatcher_client.py  pyproject.toml
.github/workflows/: ci.yml
docs/: whitepaper.docx  whitepaper.md  x-post.md
dreamcatcher/: __init__.py  __main__.py  collector.py  config.py  mcp_server.py  server.py  trainer.py
examples/: agent_integration.py
integrations/claude-code/: README.md
integrations/hermes/plugins/memory/dreamcatcher/: plugin.yaml
tests/: conftest.py  test_client.py  test_collector.py  test_config.py  test_database.py  test_server.py
